--- a/1.5.2
+++ b/1.5.2
@@ -16,6 +16,14 @@
                         "platformActionListContext": "Global",
                         "operation": "remove"
                     }
+                },
+                {
+                    "jiraTicket": "ac-46595x",
+                    "actionType": "QuickAction",
+                    "actionTypeName": "FeedItem.ContentNote",
+                    "optionsMap": {
+                        "operation": "remove"
+                    }
                 }
             ]
         },
@@ -337,6 +345,66 @@
                         "platformActionType": "QuickAction",
                         "platformActionName": "FeedItem.ContentNote",
                         "platformActionListContext": "Record",
+                        "operation": "remove"
+                    }
+                }
+            ]
+        },
+        {
+            "sObjectName": "FinServ__FinancialAccount__c",
+            "instructionTypeName": "command__Financial Account (Annuity) Layout",
+            "taskList": [
+                {
+                    "jiraTicket": "ac-46595t",
+                    "description": "Remove standard New note from quick actions",
+                    "actionType": "QuickAction",
+                    "actionTypeName": "FeedItem.ContentNote",
+                    "optionsMap": {
+                        "operation": "remove"
+                    }
+                }
+            ]
+        },
+        {
+            "sObjectName": "FinServ__FinancialAccount__c",
+            "instructionTypeName": "command__Financial Account(AUM) Layout",
+            "taskList": [
+                {
+                    "jiraTicket": "ac-46595u",
+                    "description": "Remove standard New note from quick actions",
+                    "actionType": "QuickAction",
+                    "actionTypeName": "FeedItem.ContentNote",
+                    "optionsMap": {
+                        "operation": "remove"
+                    }
+                }
+            ]
+        },
+        {
+            "sObjectName": "FinServ__FinancialAccount__c",
+            "instructionTypeName": "command__Financial Account(Life) Layout",
+            "taskList": [
+                {
+                    "jiraTicket": "ac-46595v",
+                    "description": "Remove standard New note from quick actions",
+                    "actionType": "QuickAction",
+                    "actionTypeName": "FeedItem.ContentNote",
+                    "optionsMap": {
+                        "operation": "remove"
+                    }
+                }
+            ]
+        },
+        {
+            "sObjectName": "FinServ__FinancialAccount__c",
+            "instructionTypeName": "command__Financial Account (REIT/Mutual Fund/Other) Layout",
+            "taskList": [
+                {
+                    "jiraTicket": "ac-46595w",
+                    "description": "Remove standard New note from quick actions",
+                    "actionType": "QuickAction",
+                    "actionTypeName": "FeedItem.ContentNote",
+                    "optionsMap": {
                         "operation": "remove"
                     }
                 }
