Split up account task (#118)

--- a/1.5.1
+++ b/1.5.1
@@ -17,13 +17,43 @@
             "referenceComponentIdentifier": "relatedListApiName",
             "referenceComponentIdentifierValue": "AttachedContentNotes",
             "sObjectsForRecordTypes": "Account",
-            "profiles": "AC Basic User,AC Read Only,Admin",
+            "profiles": "AC Basic User",
             "applicationName": "command__AC_Advisor"
           },
           "location": {
             "position": "replace"
           },
           "subTaskList": [
+            {
+              "jiraTicket": "AC-20070a11",
+              "optionsMap": {
+                "operation": "replace component",
+                "componentName": "command:customNotes",
+                "componentIdentifier": "customNotes_1",
+                "componentProperties": "pageSize,5",
+                "referenceComponentName": "force:relatedListSingleContainer",
+                "referenceComponentIdentifier": "relatedListApiName",
+                "referenceComponentIdentifierValue": "AttachedContentNotes",
+                "sObjectsForRecordTypes": "Account",
+                "profiles": "AC Read Only",
+                "applicationName": "command__AC_Advisor"
+              }
+            },
+            {
+              "jiraTicket": "AC-20070a12",
+              "optionsMap": {
+                "operation": "replace component",
+                "componentName": "command:customNotes",
+                "componentIdentifier": "customNotes_1",
+                "componentProperties": "pageSize,5",
+                "referenceComponentName": "force:relatedListSingleContainer",
+                "referenceComponentIdentifier": "relatedListApiName",
+                "referenceComponentIdentifierValue": "AttachedContentNotes",
+                "sObjectsForRecordTypes": "Account",
+                "profiles": "Admin",
+                "applicationName": "command__AC_Advisor"
+              }
+            },
             {
               "jiraTicket": "AC-20070a2",
               "optionsMap": {
@@ -165,13 +195,43 @@
             "referenceComponentIdentifier": "relatedListApiName",
             "referenceComponentIdentifierValue": "AttachedContentNotes",
             "sObjectsForRecordTypes": "Account",
-            "profiles": "AC Basic User,AC Read Only,Admin",
+            "profiles": "AC Basic User",
             "applicationName": "command__AC_Marketing"
           },
           "location": {
             "position": "replace"
           },
           "subTaskList": [
+            {
+              "jiraTicket": "AC-20070a11",
+              "optionsMap": {
+                "operation": "replace component",
+                "componentName": "command:customNotes",
+                "componentIdentifier": "customNotes_1",
+                "componentProperties": "pageSize,5",
+                "referenceComponentName": "force:relatedListSingleContainer",
+                "referenceComponentIdentifier": "relatedListApiName",
+                "referenceComponentIdentifierValue": "AttachedContentNotes",
+                "sObjectsForRecordTypes": "Account",
+                "profiles": "AC Read Only",
+                "applicationName": "command__AC_Marketing"
+              }
+            },
+            {
+              "jiraTicket": "AC-20070a12",
+              "optionsMap": {
+                "operation": "replace component",
+                "componentName": "command:customNotes",
+                "componentIdentifier": "customNotes_1",
+                "componentProperties": "pageSize,5",
+                "referenceComponentName": "force:relatedListSingleContainer",
+                "referenceComponentIdentifier": "relatedListApiName",
+                "referenceComponentIdentifierValue": "AttachedContentNotes",
+                "sObjectsForRecordTypes": "Account",
+                "profiles": "Admin",
+                "applicationName": "command__AC_Marketing"
+              }
+            },
             {
               "jiraTicket": "AC-20070b2",
               "optionsMap": {
@@ -313,13 +373,43 @@
             "referenceComponentIdentifier": "relatedListApiName",
             "referenceComponentIdentifierValue": "AttachedContentNotes",
             "sObjectsForRecordTypes": "Account",
-            "profiles": "AC Basic User,AC Read Only,Admin",
+            "profiles": "AC Basic User",
             "applicationName": "command__AC_Ops"
           },
           "location": {
             "position": "replace"
           },
           "subTaskList": [
+            {
+              "jiraTicket": "AC-20070a11",
+              "optionsMap": {
+                "operation": "replace component",
+                "componentName": "command:customNotes",
+                "componentIdentifier": "customNotes_1",
+                "componentProperties": "pageSize,5",
+                "referenceComponentName": "force:relatedListSingleContainer",
+                "referenceComponentIdentifier": "relatedListApiName",
+                "referenceComponentIdentifierValue": "AttachedContentNotes",
+                "sObjectsForRecordTypes": "Account",
+                "profiles": "AC Read Only",
+                "applicationName": "command__AC_Ops"
+              }
+            },
+            {
+              "jiraTicket": "AC-20070a12",
+              "optionsMap": {
+                "operation": "replace component",
+                "componentName": "command:customNotes",
+                "componentIdentifier": "customNotes_1",
+                "componentProperties": "pageSize,5",
+                "referenceComponentName": "force:relatedListSingleContainer",
+                "referenceComponentIdentifier": "relatedListApiName",
+                "referenceComponentIdentifierValue": "AttachedContentNotes",
+                "sObjectsForRecordTypes": "Account",
+                "profiles": "Admin",
+                "applicationName": "command__AC_Ops"
+              }
+            },
             {
               "jiraTicket": "AC-20070c2",
               "optionsMap": {
@@ -461,13 +551,43 @@
             "referenceComponentIdentifier": "relatedListApiName",
             "referenceComponentIdentifierValue": "AttachedContentDocuments",
             "sObjectsForRecordTypes": "Account",
-            "profiles": "AC Basic User,AC Read Only,Admin",
+            "profiles": "AC Basic User",
             "applicationName": "command__AC_Advisor"
           },
           "location": {
             "position": "replace"
           },
           "subTaskList": [
+            {
+              "jiraTicket": "AC-20070a11",
+              "optionsMap": {
+                "operation": "replace component",
+                "componentName": "command:customNotes",
+                "componentIdentifier": "customNotes_1",
+                "componentProperties": "pageSize,5",
+                "referenceComponentName": "force:relatedListSingleContainer",
+                "referenceComponentIdentifier": "relatedListApiName",
+                "referenceComponentIdentifierValue": "AttachedContentNotes",
+                "sObjectsForRecordTypes": "Account",
+                "profiles": "AC Read Only",
+                "applicationName": "command__AC_Advisor"
+              }
+            },
+            {
+              "jiraTicket": "AC-20070a12",
+              "optionsMap": {
+                "operation": "replace component",
+                "componentName": "command:customNotes",
+                "componentIdentifier": "customNotes_1",
+                "componentProperties": "pageSize,5",
+                "referenceComponentName": "force:relatedListSingleContainer",
+                "referenceComponentIdentifier": "relatedListApiName",
+                "referenceComponentIdentifierValue": "AttachedContentNotes",
+                "sObjectsForRecordTypes": "Account",
+                "profiles": "Admin",
+                "applicationName": "command__AC_Advisor"
+              }
+            },
             {
               "jiraTicket": "AC-20070d2",
               "optionsMap": {
@@ -609,13 +729,43 @@
             "referenceComponentIdentifier": "relatedListApiName",
             "referenceComponentIdentifierValue": "AttachedContentDocuments",
             "sObjectsForRecordTypes": "Account",
-            "profiles": "AC Basic User,AC Read Only,Admin",
+            "profiles": "AC Basic User",
             "applicationName": "command__AC_Marketing"
           },
           "location": {
             "position": "replace"
           },
           "subTaskList": [
+            {
+              "jiraTicket": "AC-20070a11",
+              "optionsMap": {
+                "operation": "replace component",
+                "componentName": "command:customNotes",
+                "componentIdentifier": "customNotes_1",
+                "componentProperties": "pageSize,5",
+                "referenceComponentName": "force:relatedListSingleContainer",
+                "referenceComponentIdentifier": "relatedListApiName",
+                "referenceComponentIdentifierValue": "AttachedContentNotes",
+                "sObjectsForRecordTypes": "Account",
+                "profiles": "AC Read Only",
+                "applicationName": "command__AC_Marketing"
+              }
+            },
+            {
+              "jiraTicket": "AC-20070a12",
+              "optionsMap": {
+                "operation": "replace component",
+                "componentName": "command:customNotes",
+                "componentIdentifier": "customNotes_1",
+                "componentProperties": "pageSize,5",
+                "referenceComponentName": "force:relatedListSingleContainer",
+                "referenceComponentIdentifier": "relatedListApiName",
+                "referenceComponentIdentifierValue": "AttachedContentNotes",
+                "sObjectsForRecordTypes": "Account",
+                "profiles": "Admin",
+                "applicationName": "command__AC_Marketing"
+              }
+            },
             {
               "jiraTicket": "AC-20070e2",
               "optionsMap": {
@@ -757,13 +907,43 @@
             "referenceComponentIdentifier": "relatedListApiName",
             "referenceComponentIdentifierValue": "AttachedContentDocuments",
             "sObjectsForRecordTypes": "Account",
-            "profiles": "AC Basic User,AC Read Only,Admin",
+            "profiles": "AC Basic User",
             "applicationName": "command__AC_Ops"
           },
           "location": {
             "position": "replace"
           },
           "subTaskList": [
+            {
+              "jiraTicket": "AC-20070a11",
+              "optionsMap": {
+                "operation": "replace component",
+                "componentName": "command:customNotes",
+                "componentIdentifier": "customNotes_1",
+                "componentProperties": "pageSize,5",
+                "referenceComponentName": "force:relatedListSingleContainer",
+                "referenceComponentIdentifier": "relatedListApiName",
+                "referenceComponentIdentifierValue": "AttachedContentNotes",
+                "sObjectsForRecordTypes": "Account",
+                "profiles": "AC Read Only",
+                "applicationName": "command__AC_Ops"
+              }
+            },
+            {
+              "jiraTicket": "AC-20070a12",
+              "optionsMap": {
+                "operation": "replace component",
+                "componentName": "command:customNotes",
+                "componentIdentifier": "customNotes_1",
+                "componentProperties": "pageSize,5",
+                "referenceComponentName": "force:relatedListSingleContainer",
+                "referenceComponentIdentifier": "relatedListApiName",
+                "referenceComponentIdentifierValue": "AttachedContentNotes",
+                "sObjectsForRecordTypes": "Account",
+                "profiles": "Admin",
+                "applicationName": "command__AC_Ops"
+              }
+            },
             {
               "jiraTicket": "AC-20070f2",
               "optionsMap": {
