Remove standard new note button from ac lead layout

--- a/1.5.2
+++ b/1.5.2
@@ -409,6 +409,21 @@
                     }
                 }
             ]
+        },
+        {
+            "sObjectName": "Lead",
+            "instructionTypeName": "command__AC Lead Layout",
+            "taskList": [
+                {
+                    "jiraTicket": "ac-46595x",
+                    "description": "Remove standard New note from quick actions",
+                    "actionType": "QuickAction",
+                    "actionTypeName": "FeedItem.ContentNote",
+                    "optionsMap": {
+                        "operation": "remove"
+                    }
+                }
+            ]
         }
     ]
 }
